bk_ida/gccida/c3/gen_split_957
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_957/src/insn-emit.c:8726:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_957/src/insn-emit.c:8727:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[3]); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_split_957/src/obj/insn-emit.o] Error 1
